--- a/dawi_sesion07/src/main/resources/templates/crudproductos.html
+++ b/dawi_sesion07/src/main/resources/templates/crudproductos.html
@@ -94,7 +94,7 @@
 					<td th:text="${p.objCategoria.descripcion}"></td>
 					<td>
 					<form action="/buscar" method="post">
-						<input name="id_pro" th:value="${p.id_prod}" type="hidden">
+						<input name="id_prod" th:value="${p.id_prod}" type="hidden">
 						<button class="btn btn-warning">Editar</button>						
 					</form>
 					</td>
